<resources>
    <!-- Строки -->
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="text_search">Поиск</string>
    <string name="button_mediateka">Медиатека</string>
    <string name="setup_menu">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="this_is_the_mediateka_screen">Это экран медиатеки</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="mediateka">Медиатека</string>
    <string name="timer">00:00</string>

    <!-- Плейлисты -->
    <string name="playlist_add">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="track_multiplie">треков</string>
    <string name="track_several">трека</string>
    <string name="track_one">трек</string>
    <string name="description">Описание</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_positive_btn">Завершить</string>
    <string name="dialog_negative_btn">Отмена</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="no_tracks_in_playlist">В плейлист еще не добавлен\n ни один трек</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_change">Изменить</string>
    <string name="menu_delete">Удалить</string>
    <string name="delete_playlist_dialog">Хотите удалить плейлист?</string>
    <string name="answer_no">Нет</string>
    <string name="answer_yes">Да</string>
    <string name="on_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
    <string name="edit_modify">Редактировать</string>
    <string name="save_modify">Сохранить</string>

    <!-- Ссылки -->
    <string name="url_terms_of_use">https://yandex.ru/legal/practicum_offer</string>
    <string name="url_for_share">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <!-- Сообщения в поддержку -->
    <string name="subject_mail_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_mail_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!-- Кнопки и текст -->
    <string name="this_is_the_search_screen">Это экран поиска</string>
    <string name="something_went_wrong">\nПроблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету\n</string>
    <string name="nothing_found">\nНичего не нашлось</string>
    <string name="refreshButton">Обновить</string>
    <string name="SearchCaption">Вы искали</string>
    <string name="ClearSearchHistory">Очистить историю</string>
    <string name="mediateka_empty_text">Ваша медиатека пуста</string>
    <string name="playlist_empty_text">Вы не создали\nни одного плейлиста</string>

    <!-- трек/исполнитель -->
    <string name="artist_country">Страна исполнителя</string>
    <string name="track_genre">Жанр</string>
    <string name="track_release_year">Год релиза</string>
    <string name="album_name">Название альбома</string>
    <string name="track_duration">Продолжительность</string>
    <string name="audio_file_not_available">Файл не доступен</string>


</resources>