<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainActivityStyle"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/titles_at_the_top" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonStyle"
            android:text="@string/text_search"
            app:icon="@drawable/ic_lupa"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_mediateka"
            style="@style/ButtonStyle"
            android:text="@string/button_mediateka"
            app:icon="@drawable/ic_mediateka"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_settings"
            style="@style/ButtonStyle"
            android:text="@string/setup_menu"
            app:icon="@drawable/ic_settings"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>


</LinearLayout>