<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/YP_White">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/playerstyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewPlaylist"
            style="@style/toolbaraudio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/indent_4"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Новый плейлист" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_new_playlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            app:cardCornerRadius="8dp"
            android:layout_marginHorizontal="24dp"
            app:cardElevation="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarNewPlaylist">

            <ImageView
                android:id="@+id/new_playlist_cover"
                style="@style/new_playlist_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/YP_Black"
                android:scaleType="centerCrop"
                android:src="@drawable/playlist_placeholder"
                app:shapeAppearanceOverlay="@style/new_playlist_image_shape" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_playlist_name_txt_layout"
            style="@style/textLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/playlist_title"
            app:boxStrokeColor="@drawable/box_stroke"
            app:hintTextColor="@color/YP_Blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_new_playlist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_playlist_name_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="56dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_playlist_description_txt_layout"
            style="@style/textLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:boxStrokeColor="@drawable/box_stroke"
            app:hintTextColor="@color/YP_Blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_playlist_name_txt_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_playlist_description_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="56dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Guideline для нижнего отступа -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="32dp" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/YP_Gray"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/playlist_create"
            android:textAllCaps="false"
            android:textColor="@color/YP_White"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_playlist_description_txt_layout"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>