<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyleColor"
    tools:context=".ui.player.activity.AudioPlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/playerstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Отcтупы -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indent_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indent_24" />

        <!-- Отcтупы для информации -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indent_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indent_16" />

        <!-- Кнопка "Назад" -->
        <Button
            android:id="@+id/back_button"
            style="@style/BackButtonStyle"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Область для отображения обложки плеера -->
        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/indent_24"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintBottom_toTopOf="@+id/track_name"
            android:src="@drawable/placeholderlarge"/>

        <!-- Название трека -->
        <TextView
            android:id="@+id/track_name"
            style="@style/TextStyleMedium"
            android:textSize="@dimen/string_text_size_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_12"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintBottom_toTopOf="@+id/artist_name"
            tools:text="Название трека" />

        <!-- Имя исполнителя -->
        <TextView
            android:id="@+id/artist_name"
            style="@style/TextStyleMedium"
            android:textSize="@dimen/string_text_size_14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_56"
            android:gravity="start"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintEnd_toEndOf="@+id/right_border"
            app:layout_constraintBottom_toTopOf="@+id/add_to_playlist_button"
            tools:text="Имя исполнителя"/>

        <!-- Кнопка добавления в плейлист -->

        <ImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_playlist_button_day"
            app:layout_constraintTop_toTopOf="@+id/play_pause_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_pause_button"
            app:layout_constraintStart_toStartOf="@+id/left_border" />

        <!-- Кнопка контроля воспроизведения -->

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_56"
            android:background="@android:color/transparent"
            android:src="@drawable/play_button_day"
            app:layout_constraintBottom_toTopOf="@+id/track_duration"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toEndOf="@+id/left_border" />

        <!-- Кнопка добавления в избранное -->

        <ImageButton
            android:id="@+id/add_to_favorite_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_button"
            app:layout_constraintTop_toTopOf="@+id/play_pause_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_pause_button"
            app:layout_constraintEnd_toEndOf="@+id/right_border" />

        <!-- длительность воспроизведения трека -->
        <TextView
            android:id="@+id/track_playback_time"
            style="@style/TextStyleMedium"
            android:textSize="@dimen/string_text_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_4"
            android:layout_marginBottom="@dimen/indent_36"
            app:layout_constraintBottom_toTopOf="@+id/track_duration"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border" />

        <!-- Продолжительность трека -->
        <TextView
            android:id="@+id/track_duration"
            style="@style/TextStyleInformationTrack"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/left_border_information"
            app:layout_constraintEnd_toStartOf="@+id/track_time_millis"
            app:layout_constraintBottom_toTopOf="@+id/album"
            android:text="@string/track_duration"/>


        <TextView
            android:id="@+id/track_time_millis"
            style="@style/TextStyleInformationTrackReal"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintStart_toEndOf="@+id/track_duration"
            app:layout_constraintEnd_toEndOf="@+id/right_border_information"
            app:layout_constraintTop_toTopOf="@+id/track_duration"
            app:layout_constraintBottom_toBottomOf="@+id/track_duration"
            tools:text="5:02"/>

        <!-- Название альбома (если есть) -->
        <TextView
            android:id="@+id/album"
            style="@style/TextStyleInformationTrack"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/left_border_information"
            app:layout_constraintEnd_toStartOf="@+id/album_name"
            app:layout_constraintBottom_toTopOf="@+id/release_year"
            android:text="@string/album_name"/>

        <TextView
            android:id="@+id/album_name"
            style="@style/TextStyleInformationTrackReal"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/album"
            app:layout_constraintEnd_toEndOf="@+id/right_border_information"
            app:layout_constraintTop_toTopOf="@+id/album"
            app:layout_constraintBottom_toBottomOf="@+id/album"
            tools:text="Какое то название альбома"/>

        <!-- Год релиза трека -->
        <TextView
            android:id="@+id/release_year"
            style="@style/TextStyleInformationTrack"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/left_border_information"
            app:layout_constraintEnd_toStartOf="@+id/release_year_name"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            android:text="@string/track_release_year"/>

        <TextView
            android:id="@+id/release_year_name"
            style="@style/TextStyleInformationTrackReal"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/release_year"
            app:layout_constraintEnd_toEndOf="@+id/right_border_information"
            app:layout_constraintTop_toTopOf="@+id/release_year"
            app:layout_constraintBottom_toBottomOf="@+id/release_year"
            tools:text="2020"/>

        <!-- Жанр трека -->
        <TextView
            android:id="@+id/genre"
            style="@style/TextStyleInformationTrack"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/left_border_information"
            app:layout_constraintEnd_toStartOf="@+id/genre_name"
            app:layout_constraintBottom_toTopOf="@+id/country"
            android:text="@string/track_genre"/>

        <TextView
            android:id="@+id/genre_name"
            style="@style/TextStyleInformationTrackReal"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/indent_8"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/genre"
            app:layout_constraintEnd_toEndOf="@+id/right_border_information"
            app:layout_constraintTop_toTopOf="@+id/genre"
            app:layout_constraintBottom_toBottomOf="@+id/genre"
            tools:text="Рок"/>

        <!-- Страна исполнителя -->

        <TextView
            android:id="@+id/country"
            style="@style/TextStyleInformationTrack"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/indent_8"
            android:paddingBottom="@dimen/indent_24"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/left_border_information"
            app:layout_constraintEnd_toStartOf="@+id/country_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/artist_country"/>

        <TextView
            android:id="@+id/country_name"
            style="@style/TextStyleInformationTrackReal"
            android:textSize="@dimen/string_text_size_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/indent_8"
            android:paddingBottom="@dimen/indent_24"
            android:gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintEnd_toEndOf="@+id/right_border_information"
            app:layout_constraintTop_toTopOf="@+id/country"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            tools:text="Австралия"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_sheet_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_audio_player"
        style="@style/bottom_sheet_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/bottom_sheet_line"
            style="@style/bottom_sheet_line_style"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_sheet_line" />

        <TextView
            style="@style/TextStyleMedium"
            android:textSize="@dimen/string_text_size_19"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/playlist_add" />

        <Button
            android:id="@+id/bottom_sheet_add_playlist_btn"
            style="@style/bottom_sheet_button_style" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
